# SwarmRobotics

./: CMakeLists.txt  GlobalSensorDataProcessing.py  LocalSensorData.py  README.md  SensorData.msg  package.xml  setup.txt
centralHub/: GlobalSensorDataProcessing.py  ImageProcessing.py  cvPOC.py  interactiveColorDetect.cpp  launchscript
centralHub/testCode/: cvPOC.py  depthAssisted2.py  distancePOC.py
launch/: robot.launch  robot1.launch  robot3.launch  robot4.launch  robotonly.launch  robotrobot.launch  sensor.launch
msg/: RobotLocation.msg  RobotLocationList.msg  RobotVelocity.msg  SensorData.msg  WheelSpeeds.msg
robot/: GoalPSO.py  LocalSensorData.py  MinPSO.py  Motor.py  ObstacleAvoidance.py  Robot.py  RobotController.py  RobotNode.py  Robot_Driver.py  Robot_Info.py
robot/testCode/: Robot.py  RobotLightTest.py  RobotTempTest.py  RobotTest.py  Robot_Driver.py  sensorTest.py  tempTest.py
testCode/: Motor.py  MotorTest.py
