<package>
    <name>swarm</name>
    <version>1.1.1</version>
    <description> 
        This package has all the code for the University of Pittsburgh Swarm Robotics Senior Design group
    </description>
    <maintainer email="jtl44@pitt.edu">Joe Lynch</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs_msgs</build_depend>
    <build_depend>message_generation</build_depend>
	<!--<exec_depend>message_runtime</exec_depend>-->
    
    
    <run_depend>std_msgs_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>